[project]
name = "langgraph-agents"
version = "0.1.0"
description = "Real-world AI agents that think, search, write, and build - powered by LangGraph and modular LLM"
authors = [
    { name="Nehal Vaghasiya", email="nehal.vaghasiya777@gmail.com" },
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"


# ---- Main dependencies ----

dependencies = [
    "beautifulsoup4>=4.13.4",
    "langchain-community>=0.3.27",
    "langchain-experimental>=0.3.4",
    "langchain-google-community>=2.0.7",
    "langchain-huggingface>=0.3.0",
    "langchain-text-splitters>=0.3.8",
    "langchain[openai]>=0.3.26",
    "langgraph>=0.5.3",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.0.0",
]
